still trying to fix distortion

--- a/cafek9.css
+++ b/cafek9.css
@@ -1,11 +1,6 @@
 body {
 	margin: 0px; 
 	background-color: #E6E6FA;
-	height: 100vh;
-}
-
-.pageContainer {
-
 }
 
 .banner {	
@@ -60,6 +55,7 @@ body {
 
 .flexContainer {
 	width: 100%;
+	max-height: 10%;
 	display: flex;
 }
 
@@ -73,6 +69,7 @@ body {
 	flex: 30%;
 	width: 10%;
 	height: auto;
+	overflow: hidden;
 }
 
 .table {
@@ -89,6 +86,7 @@ body {
 	flex: 50%;
 	width: 100%;
 	height: auto;
+	overflow: hidden;
 }
 
 .footer {
